@@ -11,9 +11,11 @@
 
 * KGySoft.Drawing.ImagingTools.exe
 ==================================
++ Supporting saving animated GIF images even if frames have been changed. Saving icons or TIFF files as GIF while
+  the compound mode is checked also saves an animated GIF file with 1 second delay for each frames.
 - Opening a .bdat file in Bitmap visualizer mode triggered the "Metafile has been converted to Bitmap..." message.
-- Could not open an animated GIF in Mono/Linux. Known issue: libgdiplus decodes delta frames and different frame
-  sizes incorrectly. This could only be solved by a custom decoder.
+- Could not open an animated GIF in Mono/Linux. Still existing known issue: libgdiplus decodes delta frames and
+  different frame sizes incorrectly. This could only be solved by a custom decoder.
 
 + API changes:
   + ImageInfo class: New constructor overloads to be able to prevent cloning each frames.
